--- a/Lab-1/Fitness Website/index.html
+++ b/Lab-1/Fitness Website/index.html
@@ -179,31 +179,7 @@
 					</div>
   </div>
 </section>
-<!-- <section id="clients">
-  <div id="demo" class="clients">
-    <div class="container">
-      <div class="heading text-center">
-        <h2>Clients</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="customNavigation"> <a class="prev"><i class="fa fa-chevron-circle-left"></i></a> <a class="next"><i class="fa fa-chevron-circle-right"></i></a> </div>
-          <div id="owl-demo" class="owl-carousel">
-            <div class="item"> <span class="helper"> <img src="images/clients/client-1.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-2.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-3.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-4.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-5.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-6.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-7.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-8.png" alt="client" /></span> </div>
-            <div class="item"> <span class="helper"> <img src="images/clients/client-9.png" alt="client" /></span> </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
+<!-- Gallery start -->
 <section id="work" class="page-section page">
   <div class="container text-center">
     <div class="heading">
@@ -249,47 +225,51 @@
       </div>
     </div>
   </div>
+  <!-- end -->
 </section>
+<!-- Gym Memberships -->
 <section id="plans" class="page-section">
   <div class="container">
     <div class="heading text-center"> 
       <!-- Heading -->
-      <h2>Our Plans</h2>
+      <h2>Our Gym Membership</h2>
       <p>At lorem Ipsum available, but the majority have suffered alteration in some form by injected humour.</p>
     </div>
     <div class="row flat">
       <div class="col-lg-3 col-md-3 col-xs-12">
         <ul class="plan plan1">
           <li class="plan-name">Basic </li> 
-          <li> <strong>INR 4000</strong> GYM Membership </li>
-          <li> Common Trainer </li>
-          <li> <strong>Forum</strong> Support </li>
+          <li> <strong>INR 4000</strong> 1 Month </li>
+          <li> Gym Membership </li>
+          <li>Common Trainer</li>
+          <li> <strong>Refund</strong> Support </li>
           <li class="plan-action"> <a href="#" class="btn btn-danger btn-lg">Signup</a> </li>
         </ul>
       </div>
       <div class="col-lg-3 col-md-3 col-xs-12">
         <ul class="plan plan2 featured">
-          <li class="plan-name">Standard </li> 
-          <li> <strong>400GB</strong> Bandwidth </li>
-          <li> <strong>10</strong> Email Address </li>
+          <li class="plan-name"> Standard </li> 
+          <li> <strong>20000</strong> 6 Month </li>
+          <li> Gym Membership </li>
+          <li>Common Trainer</li>
+          <li> <strong>Refund</strong> Support </li>
+          <li class="plan-action"> <a href="#" class="btn btn-danger btn-lg">Signup</a> </li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-3 col-xs-12">
+        <ul class="plan plan3">
+          <li class="plan-name">Premium</li> 
+          <li> <strong>30000</strong> 1 YEAR </li>
+          <li> <strong>Personal Trainer</strong>  </li>
           <li> <strong>Forum</strong> Support </li>
           <li class="plan-action"> <a href="#" class="btn btn-danger btn-lg">Signup</a> </li>
         </ul>
       </div>
       <div class="col-lg-3 col-md-3 col-xs-12">
         <ul class="plan plan3">
-          <li class="plan-name">Advanced </li> 
-          <li> <strong>1024GB</strong> Bandwidth </li>
-          <li> <strong>Unlimited</strong> Email Address </li>
-          <li> <strong>Forum</strong> Support </li>
-          <li class="plan-action"> <a href="#" class="btn btn-danger btn-lg">Signup</a> </li>
-        </ul>
-      </div>
-      <div class="col-lg-3 col-md-3 col-xs-12">
-        <ul class="plan plan4">
-          <li class="plan-name">Mighty </li> 
-          <li> <strong>1024GB</strong> Bandwidth </li>
-          <li> <strong>Unlimited</strong> Email Address </li>
+          <li class="plan-name">Premium</li> 
+          <li> <strong>30000</strong> 1 YEAR </li>
+          <li> <strong>Personal Trainer</strong>  </li>
           <li> <strong>Forum</strong> Support </li>
           <li class="plan-action"> <a href="#" class="btn btn-danger btn-lg">Signup</a> </li>
         </ul>
