--- a/Lab-1/Aniflix.com/index.html
+++ b/Lab-1/Aniflix.com/index.html
@@ -8,20 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="header">
-        <div class="navbar">
-            <a href="###">Home</a>
-            <a href="###">Movies</a>
-            <select name="category" id="category">
-                <h2>Category</h2>
-                <option value="1">Funny</option>
-                <option value="2">Crime</option>
-                <option value="3">Magic</option>
-            </select>
-            <a href="###">Contect</a>
-            <button type="submit">SignUp</button>
-            <button type="submit">Login</button>
+    <!-- header start-->
+     <header>
+        <div class="logo">
+            <img src="./images/ani-logo.png" alt="logo">
         </div>
-    </div>
+     </header>
+    <!-- hrader end -->
+    <!-- slider -->
+    <!-- slider end -->
+    <!-- work start -->
+    <!-- work end -->
+    <!-- info here -->
+    <!-- info end -->
+    <!-- goal -->
+    <!-- goad end -->
+    <!-- service -->
+    <!-- service end -->
+    <!-- client -->
+    <!-- client end -->
+    <!-- stretgies -->
+    <!-- stretgies end -->
+    <!-- feedback -->
+    <!-- feedback end -->
+    <!-- contact us -->
+    <!-- contact us end -->
+    <!-- footer -->
+    <!-- footer end -->
 </body>   
 </html>
