--- a/New folder/Java Script/index.html
+++ b/New folder/Java Script/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div id ="main"></div>
+    <!-- <button id="button">Click me</button> -->
+     <input type="text" placeholder="enter name" id="name">
     <script src="./Dom.js"></script>
 </body>
 </html>
