--- a/New folder/Java Script/index.html
+++ b/New folder/Java Script/index.html
@@ -9,6 +9,8 @@
     <div id ="main"></div>
     <!-- <button id="button">Click me</button> -->
      <input type="text" placeholder="enter name" id="name">
-    <script src="./Dom.js"></script>
+     <button id="click">stop interval</button>
+    <!-- <script src="./Dom.js"></script> -->
+    <script src="./index.js"></script>
 </body>
 </html>
